remove unneeded jasmine/karma test functionality and edit README to correct a layout problem.

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,5 +1,5 @@
 body {
-  background-color:#b3c4e0;
+  background-color: gold;
 }
 h1 {
   color: black;
